# frappe_whatsapp

./: .gitignore  Dockerfile  MANIFEST.in  NGROK_WEBHOOK_GUIDE.md  Procfile  README.md  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test_frappe_logging_integration.py  test_frappe_logging_simple.py  test_hooks_validation.py  whatsapp.py
.github/workflows/: build_n_push.yml  ci.py  ci.yml  pylint.yml  secret-scan.yml  stale.yml
docs/: index.html
frappe_whatsapp/: __init__.py  hooks.py  modules.txt  patches.txt  testing.py
frappe_whatsapp/api/: __init__.py  whatsapp.py
frappe_whatsapp/controllers/: whatsapp_api_log.py  whatsapp_message.py
frappe_whatsapp/patches/: migrate_to_multi_account.py  set_default_in_whatsapp_settings.py
frappe_whatsapp/setup/: install.py  intsall.py  uninstall.py
frappe_whatsapp/utils/: __init__.py  bulk_messaging.py  flow.py  n8n_integration.py  template_utils.py  test_bulk_messaging.py  test_utils.py  test_webhook.py  webhook.py
frappe_whatsapp/www/: frappe_whatsapp.py
hedst-bench/: Procfile  dump.rdb
hedst-bench/config/: redis_cache.conf  redis_queue.conf
hedst-bench/env/: pyvenv.cfg
hedst-bench/sites/: apps.json  common_site_config.json
kreo_whats2/: __init__.py  hooks.py
kreo_whats2/api/: queue_processor.py  template_renderer.py  webhook_config.py  webhook_handler.py  whatsapp_api.py
kreo_whats2/commands/: ngrok.py
oneinbox_whatsapp/: index.html  package.json  proxyOptions.js  vite.config.js
whatsapp_chat/: index.html  package.json  vite.config.js
(+147 files in other folders)
