[project]
name = "frappe_whatsapp"
authors = [
    { name = "Shridhar Patil", email = "shrip.dev@gmail.com"}
]
description = "WhatsApp integration for frappe. Use directly meta API's without any 3rd party integration."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "python-magic~=0.4.24",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0-dev,<17.0.0"
